<resources>
    <string name="app_name">pit-collection-2020</string>
    <string name="collection_objective">Objective Pit Collection</string>
    <string name="collection_subjective">Subjective Pit Collection (SEALs)</string>
    <string name="FILLER_TEAM">Team Number</string>
    <string name="motor_number"># of Motors</string>
    <string name="ground_intake">Can Ground Intake</string>
    <string name="no_ground_intake">Can NOT Ground Intake</string>
    <string name="cross_trench">Can Cross Trench</string>
    <string name="no_cross_trench">Can NOT Cross Trench</string>
    <string name="team_number">1678</string>
    <string name="btn_save">Save Button</string>
    <string name="error_back_reset">Do you want to reset the collection mode?</string>
    <string name="error_back">Please long press to reset the collection mode</string>
    <string name="tv_version_num">Version: %1$s</string>
    <string name="tv_objective_version">Version: %1$s, Objective Collection</string>
    <string name="tv_subjective_version">Version: %1$s, Subjective Collection</string>

    <string-array name="drivetrain_array">
        <item>Drivetrain</item>
        <item>Tank</item>
        <item>Mecanum</item>
        <item>Swerve</item>
        <item>Other</item>
    </string-array>
    <string-array name="drivetrain_motor_type_array">
        <item>Drivetrain Motor Type</item>
        <item>Minicim</item>
        <item>Cim</item>
        <item>Neo</item>
        <item>Falcon</item>
    </string-array>
    <string-array name="picture_types">
        <item>Full Robot</item>
        <item>Drivetrain</item>
        <item>Intake</item>
        <item>Indexer</item>
        <item>Shooter</item>
        <item>Climber</item>
    </string-array>
</resources>
