<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="@dimen/very_small">

    <TextView
        android:id="@+id/tv_team_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:text="@string/team_number"
        android:textStyle="bold"
        android:textSize="75dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ToggleButton
            style="@style/tb_collection"
            android:textOn="@string/cross_trench"
            android:textOff="@string/no_cross_trench" />

        <ToggleButton
            style="@style/tb_collection"
            android:textOn="@string/ground_intake"
            android:textOff="@string/no_ground_intake"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spin_drivetrain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/spin_drivetrain_motor_type"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            style="@style/btn_collection"
            android:hint="@string/motor_number"
            android:inputType="number"
            android:gravity="center"
            android:layout_margin="@dimen/very_small"/>

        <Button
            style="@style/btn_collection"
            android:text="Save"
            android:layout_margin="@dimen/very_small"/>

    </LinearLayout>

</LinearLayout>